--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,1 @@
-VITE_FIREBASE_API_KEY=<YOUR_API_KEY>
-VITE_FIREBASE_AUTH_DOMAIN=<YOUR_API_KEY>
-VITE_FIREBASE_PROJECT_ID=<YOUR_API_KEY>
-VITE_FIREBASE_STORAGE_BUCKET=<YOUR_API_KEY>
-VITE_FIREBASE_MESSAGING_SENDER_ID=<YOUR_API_KEY>
-VITE_FIREBASE_APP_ID=<YOUR_API_KEY>
-VITE_FIREBASE_MEASUREMENT_ID=<YOUR_API_KEY>
+VITE_R2_URL=<YOUR_API_KEY>
